--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
   <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 <meta name="twitter:card" content="summary">
-<meta name="twitter:site" content="kernelm0de">
-<meta name="twitter:creator" content="kernelm0de">
+<meta name="twitter:site" content="@kernelm0de">
+<meta name="twitter:creator" content="@kernelm0de">
 {% if page.title %}
   <meta name="twitter:title" content="{{ page.title }}">
 {% else %}
