--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -16,3 +16,8 @@
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="twitter:title" content="{{ page.title }}" />
     {% endif %}
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@kernelm0de">
+    <meta name="twitter:description" content="{{ page.excerpt| strip_html }}">
+    <meta name="twitter:creator" content="@kernelm0de">
+
