--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -18,6 +18,6 @@
     {% endif %}
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@kernelm0de">
-    <meta name="twitter:description" content="{{ page.excerpt| strip_html }}">
+    <meta name="twitter:description" content="{{ page.meta_description }}">
     <meta name="twitter:creator" content="@kernelm0de">
 
